k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: venus-api
  namespace: venus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: venus-api
  template:
    metadata:
      labels:
        app: venus-api
    spec:
      containers:
        - name: venus-api
          image: 108656655469.dkr.ecr.us-east-1.amazonaws.com/venus-auth-api:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
